End of SequencerEntrys not set correctly #36466

Closed
opened 2013-08-14 13:03:14 +02:00 by Jan Lukas Gernert · 5 comments

%%%--- Operating System, Graphics card ---
Debian 6 and GeForce 210/PCIe/SSE2 with NVIDIA 295.59

- Blender version with error, and version that worked ---

Bug found in 2.68

- Short description of error ---

I don't think it is something that the user would notice, but in "sound.c" when a new SequencerEntry is added, the end of that entry is always set to "-1" instead of the correct value. This leads to entrys still updating even after their end was reached, wasting cpu and causing major problems with something im working on.
I attatched a patch that fixes the problem for me.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Debian 6 and GeForce 210/PCIe/SSE2 with NVIDIA 295.59 - Blender version with error, and version that worked --- Bug found in 2.68 - Short description of error --- I don't think it is something that the user would notice, but in "sound.c" when a new SequencerEntry is added, the end of that entry is always set to "-1" instead of the correct value. This leads to entrys still updating even after their end was reached, wasting cpu and causing major problems with something im working on. I attatched a patch that fixes the problem for me. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%This is not a bug, but intended behavior. -1 stands for full length so that the audio systems plays the sound in it's complete length. One might think that there is no difference to setting it to the length of the sound, but FFMPEG sometimes reports a wrong estimated length and if that is to short, the sound would not be played to its full length as desired. Only when the sound length is changed by the user the length will be set to a different value that is exactly the length provided by user input.

Regarding wasting CPU cycles by having the sound updating all the time in AUD_SoftwareDevice::AUD_SoftwareHandle::update() there's only one solution: adding another sound state next to invalid, paused and playing that marks a sound as finished, I'll think about that.%%%

%%%This is not a bug, but intended behavior. -1 stands for full length so that the audio systems plays the sound in it's complete length. One might think that there is no difference to setting it to the length of the sound, but FFMPEG sometimes reports a wrong estimated length and if that is to short, the sound would not be played to its full length as desired. Only when the sound length is changed by the user the length will be set to a different value that is exactly the length provided by user input. Regarding wasting CPU cycles by having the sound updating all the time in AUD_SoftwareDevice::AUD_SoftwareHandle::update() there's only one solution: adding another sound state next to invalid, paused and playing that marks a sound as finished, I'll think about that.%%%
Member

%%%Revision 59143 should fix these performance problems that you are encountering. Closing.%%%

%%%Revision 59143 should fix these performance problems that you are encountering. Closing.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Works great here on my machine.
Thanks =)%%%

%%%Works great here on my machine. Thanks =)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36466
No description provided.